@@ -59,12 +59,19 @@ public class HServerLoad implements WritableComparable {
   }
   
   /**
+   * Originally, this method factored in the effect of requests going to the
+   * server as well. However, this does not interact very well with the current
+   * region rebalancing code, which only factors number of regions. For the 
+   * interim, until we can figure out how to make rebalancing use all the info
+   * available, we're just going to make load purely the number of regions.
+   *
    * @return load factor for this server
    */
   public int getLoad() {
-    int load = numberOfRequests == 0 ? 1 : numberOfRequests;
-    load *= numberOfRegions == 0 ? 1 : numberOfRegions;
-    return load;
+    // int load = numberOfRequests == 0 ? 1 : numberOfRequests;
+    // load *= numberOfRegions == 0 ? 1 : numberOfRegions;
+    // return load;
+    return numberOfRegions;
   }
   
   /** {@inheritDoc} */
