@@ -61,6 +61,7 @@ Hbase Change Log
    HBASE-683   can not get svn revision # at build time if locale is not english
                (Rong-En Fan via Stack)
    HBASE-699   Fix TestMigrate up on Hudson
+   HBASE-615   Region balancer oscillates during cluster startup
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
